Fix overflow scroll and font

--- a/src/assets/style/Details.module.scss
+++ b/src/assets/style/Details.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 60px;
+  overflow-y: auto;
 
   &::-webkit-scrollbar {
     width: 5px;
@@ -55,7 +56,7 @@
     width: 100%;
     height: 60px;
     font-size: 130%;
-    font-weight: bold;
+    font-weight: 500;
     color: white;
     position: absolute;
     bottom: 0;
@@ -66,10 +67,11 @@
   height: calc(100% - 60px);
   padding: 30px 40px;
   color: #707070;
+  font-size: 110%;
 
   h2 {
-    font-size: 1.2em;
-    font-weight: bold;
+    font-size: 1em;
+    font-weight: 500;
     margin-bottom: 10px;
     color: black;
   }
